--- a/.gitignore
+++ b/.gitignore
@@ -38,4 +38,20 @@ yarn-debug.log*
 .env*
 # Ignore Mac and Linux file system files
 *.swp
+.env*
+# Avoid accidental upload of the Sketch and Figma design files
+#####################################################
+## Please do not remove lines 5 and 6 - thanks! 🙂 ##
+#####################################################
+*.sketch
+*.fig
+
+# Avoid accidental XD upload if you convert the design file
+###############################################
+## Please do not remove line 12 - thanks! 🙂 ##
+###############################################
+*.xd
+
+# Avoid your project being littered with annoying .DS_Store files!
 .DS_Store
+.prettierignore.env*
